src/styles/styles.css
@font-face {
    font-family: takgeneral;
    src: url('./font/IRANSans.eot');
    src: url('./font/IRANSans.woff2') format('woff2'),
    url('./font/IRANSans.woff') format('woff');
}
html , body , #__next{
    height: 100%;
}
a {
    text-decoration: none;
    color: inherit;
}
*{
    margin: 0;
    padding : 0 ;
    box-sizing: border-box;
}

